--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             <img src="logo.png" title="Pizzaria Seu Pizza" class="logo">
             <nav>
               <ul>
-                <li><a href ="http://www.google.com.br">Home</a></li>
-                <li><a href ="http://www.google.com.br">Cardapio</a></li>
+                <li><a href ="index.html">Home</a></li>
+                <li><a href ="Cardapio.html">Cardapio</a></li>
                 <li><a href ="http://www.google.com.br">Contato</a></li>
                
               </ul>
